charts/templates/deployment-aptly.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aptly
  name: aptly
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aptly
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: aptly
    spec:
      containers:
        - name: aptly-server
          image: molior-registry:5000/aptly:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3143
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/aptly
              name: aptly

        - name: aptly-nginx
          image: molior-registry:5000/molior-nginx:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/aptly
              name: aptly
      restartPolicy: Always
      volumes:
        - name: aptly
          persistentVolumeClaim:
            claimName: aptly
