charts/templates/service-aptly.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    molior.service: aptly
  name: aptly
spec:
  ports:
    - name: "3143"
      port: 3143
      targetPort: 3143
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    molior.service: aptly
