charts/templates/service-repo.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: repo
  name: repo
spec:
  type: NodePort
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8000
      nodePort: 30088
  selector:
    app: aptly
