charts/templates/service-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web
  name: web
spec:
  type: NodePort
  ports:
    - name: "web-ui"
      port: 8000
      targetPort: 80
      nodePort: 30080
  selector:
    app: web
