charts/templates/ingress-molior.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: molior-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
